# aegra

./: CLAUDE.md  Makefile  README.md  auth.py  docker-compose.yml  pyproject.toml  run_server.py
.github/workflows/: ci.yml  e2e.yml
alembic/versions/: 20250817172544_initial_schema.py
deployments/docker/: Dockerfile
docs/: code-quality.md  docs.json  feature-support.mdx  introduction.mdx  llms.txt  migration.mdx  openapi.json  quickstart.mdx  why-aegra.mdx
docs/guides/: assistants.mdx  custom-routes.mdx  dependencies.mdx  human-in-the-loop.mdx  store.mdx  streaming.mdx  subgraphs.mdx  threads-and-state.mdx
docs/reference/: api-assistants.mdx  api-health.mdx  api-runs.mdx  api-store.mdx  api-threads.mdx
libs/aegra-api/: pyproject.toml
libs/aegra-api/src/aegra_api/: main.py
libs/aegra-api/src/aegra_api/api/: runs.py  stateless_runs.py  store.py
libs/aegra-api/src/aegra_api/services/: streaming_service.py
libs/aegra-api/tests/integration/test_api/: test_runs_crud.py  test_stateless_runs_crud.py  test_store_crud.py
libs/aegra-api/tests/unit/test_api/: test_runs.py  test_runs_wait.py  test_stateless_runs.py
libs/aegra-api/tests/unit/test_services/: test_langgraph_service.py
libs/aegra-cli/: pyproject.toml
scripts/: export_openapi.py  migrate.py
src/agent_server/: main.py
src/agent_server/api/: assistants.py  runs.py  store.py  threads.py
src/agent_server/core/: auth_ctx.py  auth_deps.py  auth_middleware.py  database.py  health.py  orm.py  sse.py
src/agent_server/core/serializers/: general.py  langgraph.py
src/agent_server/models/: auth.py  runs.py  threads.py
src/agent_server/observability/: langfuse_integration.py
src/agent_server/services/: assistant_service.py  broker.py  event_converter.py  event_store.py  langgraph_service.py  streaming_service.py  thread_state_service.py
src/agent_server/utils/: assistants.py  status_compat.py
tests/e2e/test_human_in_loop/: test_human_in_loop.py
tests/e2e/test_runs/: test_runs.py
tests/e2e/test_store/: test_store.py
tests/e2e/test_streaming/: test_event_filtering_and_subgraphs.py
tests/e2e/test_threads/: test_get_state_endpoint.py
tests/fixtures/: langgraph.py  session_fixtures.py
tests/integration/test_api/: test_assistants_crud.py  test_runs_crud.py  test_store_crud.py  test_threads_crud.py  test_threads_history.py
tests/integration/test_services/: test_assistant_service_db.py  test_event_store_integration.py  test_langgraph_service_integration.py  test_streaming_hitl.py
tests/unit/: test_main.py
tests/unit/test_api/: test_runs_wait.py  test_thread_status.py
tests/unit/test_core/: test_auth_middleware.py  test_sse.py
tests/unit/test_core/test_serializers/: test_general.py
tests/unit/test_middleware/: test_logger_middleware.py
tests/unit/test_observability/: test_langfuse_integration.py
tests/unit/test_services/: test_assistant_service.py  test_assistant_service_schemas.py  test_event_converter.py  test_event_converter_namespace.py  test_event_store.py  test_langgraph_service.py  test_streaming_updates_filtering.py  test_thread_state_service.py
tests/unit/test_threads/: test_state.py  test_state_checkpoint.py
