[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegra"
version = "0.1.0"
description = "Open source LangGraph Platform alternative - Self-hosted AI agent backend with FastAPI and PostgreSQL. Zero vendor lock-in, full control over your agent infrastructure."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["langgraph", "ai-agents", "self-hosted", "agent-backend", "fastapi", "postgresql", "langchain", "agent-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Muhammad Ibrahim", email = "mibrahim37612@gmail.com"}
]
maintainers = [
    {name = "Muhammad Ibrahim", email = "mibrahim37612@gmail.com"}
]
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.2",
    "greenlet>=3.2.4",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "langchain>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.1",
    "psycopg[binary,pool]>=3.2.12",
    "pydantic>=2.12.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.35.0",
    "langfuse>=3.10.0",
    "structlog>=25.4.0",
    "asgi-correlation-id>=4.3.4",
]

[project.urls]
Homepage = "https://github.com/ibbybuilds/aegra"
Repository = "https://github.com/ibbybuilds/aegra"
Documentation = "https://github.com/ibbybuilds/aegra#readme"
"Bug Tracker" = "https://github.com/ibbybuilds/aegra/issues"
"Feature Requests" = "https://github.com/ibbybuilds/aegra/issues"



[tool.hatch.build.targets.wheel]
packages = ["src/agent_server"]

[tool.hatch.build.targets.wheel.sources]
"graphs/react_agent" = "react_agent"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["tests", "alembic", ".venv"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults (FastAPI Depends)
    "UP007", # use X | Y for type annotations (keep Optional for clarity)
    "TC002", # type-checking imports cause issues with SQLAlchemy, Pydantic, etc.
    "TC003", # type-checking imports cause issues with SQLAlchemy, Pydantic, etc.
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "e2e: marks tests as end-to-end tests",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "alembic"]
skips = ["B101"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ruff>=0.8.4",
    "langgraph-sdk==0.2.4",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.8.0",
]

# Note: Integrations < 1.0 are disabled for now
# Langchain integrations - Chat Model Providers (https://docs.langchain.com/oss/python/integrations/chat
# Core/Most Popular Providers
anthropic = [
    "langchain-anthropic>=1.0.0",
]
openai = [
    "langchain-openai>=1.0.0",
]
google-vertexai = [
    "langchain-google-vertexai>=2.0.0",
]
google-genai = [
    "langchain-google-genai>=2.0.0",
]
aws = [
    "langchain-aws>=1.0.0",
]
# Cloud Providers
groq = [
    "langchain-groq>=1.0.0",
]
mistralai = [
    "langchain-mistralai>=1.0.0",
]
# cohere = [
#     "langchain-cohere>=0.3.0",  # Pre-1.0
# ]
# together = [
#     "langchain-together>=0.3.0",  # Pre-1.0
# ]
# fireworks = [
#     "langchain-fireworks>=0.3.0",  # Pre-1.0
# ]
# perplexity = [
#     "langchain-perplexity>=0.1.0",  # Pre-1.0
# ]
# Local/Self-Hosted Providers
ollama = [
    "langchain-ollama>=1.0.0",
]
huggingface = [
    "langchain-huggingface>=1.0.0",
]
# Enterprise Providers
# ibm = [
#     "langchain-ibm>=0.3.0",  # Pre-1.0
# ]
# databricks = [
#     "langchain-databricks>=0.2.0",  # Pre-1.0
# ]
# nvidia = [
#     "langchain-nvidia-ai-endpoints>=0.3.0",  # Pre-1.0
# ]
# Emerging Providers
# xai = [
#     "langchain-xai>=0.2.0",  # Pre-1.0
# ]
# Additional Tools & Features
mcp = [
    "langchain-mcp-adapters>=0.1.12",
]
langmem = [
    "langmem>=0.0.30",
]